k3d-github/cluster-types/mgmt/mgmt-template/components/chartmuseum/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chartmuseum
  namespace: chartmuseum
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chartmuseum.<DOMAIN_NAME>`)
      services:
        - name: chartmuseum
          port: 80
  tls:
    secretName: chartmuseum-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: chartmuseum
spec:
  redirectScheme:
    scheme: https
    permanent: true
